--- a/src/main/resources/variable/jdbc.properties
+++ b/src/main/resources/variable/jdbc.properties
@@ -2,3 +2,8 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/zens_ucgs?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=root
+redis.host=10.211.55.7
+redis.name=ucgs_redis
+redis.port=6379
+redis.pwd=redis
+redis.db=0
